[gd_scene load_steps=6 format=3 uid="uid://c3u1j7y83xnxy"]

[ext_resource type="PackedScene" uid="uid://tign6pylq6lu" path="res://scenes/characters/mushroom_folk/mushroom_folk.tscn" id="1_orcbs"]
[ext_resource type="Script" path="res://scenes/characters/mushroom_folk/mushrooms_circle.gd" id="1_w14x1"]
[ext_resource type="PackedScene" uid="uid://b180jm6jisq1f" path="res://scenes/environment/ground.tscn" id="3_vf2lv"]
[ext_resource type="AudioStream" uid="uid://d31eewt2ydlj3" path="res://audio/characters/mushroom_folk/mushroom_greeting.mp3" id="4_pnqpo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_t5yia"]
size = Vector3(22.0343, 5.2345, 17.7796)

[node name="MushroomCircle" type="Node3D"]
script = ExtResource("1_w14x1")

[node name="MushroomWatchArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="MushroomWatchArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.95519, 2.71935, -0.927848)
shape = SubResource("BoxShape3D_t5yia")

[node name="Mushrooms" type="Node3D" parent="."]

[node name="SpeakerMushroom" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.702735, 0, -1.87248, 0, 2, 0, 1.87248, 0, -0.702735, 8.92014, 0.552732, 0.541201)

[node name="MushroomFolk7" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(0.873755, 0, -0.486365, 0, 1, 0, 0.486365, 0, 0.873755, 2.45914, 0.801063, -6.2186)

[node name="MushroomFolk" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(0.519342, 0, 0.469344, 0, 0.7, 0, -0.469344, 0, 0.519342, -3.62666, 0.647441, -3.9947)

[node name="MushroomFolk6" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(0.489209, 0, 0.103316, 0, 0.5, 0, -0.103316, 0, 0.489209, -1.07596, 0.656105, -6.1622)

[node name="MushroomFolk2" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.391496, 0, 0.580285, 0, 0.7, 0, -0.580285, 0, -0.391496, -3.26406, 0.579449, 4.3356)

[node name="MushroomFolk3" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.0333635, 0, 0.498885, 0, 0.5, 0, -0.498885, 0, -0.0333635, -5.24996, 0.561302, 0.731898)

[node name="MushroomFolk5" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.557061, 0, -0.423891, 0, 0.7, 0, 0.423891, 0, -0.557061, 4.35264, 0.739478, 2.9101)

[node name="MushroomFolk4" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.496178, 0, -0.0617056, 0, 0.5, 0, 0.0617056, 0, -0.496178, 1.31684, 0.64026, 4.486)

[node name="MushroomFolk8" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.0992356, 0, -0.0123411, 0, 0.1, 0, 0.0123411, 0, -0.0992356, -1.34996, 0.535469, 5.1192)

[node name="MushroomFolk9" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.0992356, 0, -0.0123411, 0, 0.1, 0, 0.0123411, 0, -0.0992356, -0.836662, 0.54368, 5.1655)

[node name="MushroomFolk10" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.14919, 0, 0.0155647, 0, 0.15, 0, -0.0155647, 0, -0.14919, -1.11896, 0.536359, 5.5801)

[node name="MushroomFolk24" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(0.0678608, 0, 0.07345, 0, 0.1, 0, -0.07345, 0, 0.0678608, -1.63066, 0.622814, -4.8321)

[node name="MushroomFolk25" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(0.0339304, 0, 0.036725, 0, 0.05, 0, -0.036725, 0, 0.0339304, -2.05266, 0.611242, -4.5363)

[node name="MushroomFolk26" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(0.124033, 0, 0.0843558, 0, 0.15, 0, -0.0843558, 0, 0.124033, -2.10446, 0.610661, -5.0352)

[node name="MushroomFolk19" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.0611803, 0, -0.079101, 0, 0.1, 0, 0.079101, 0, -0.0611803, 7.71624, 0.765664, 1.1955)

[node name="MushroomFolk20" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.116184, 0, -0.0948754, 0, 0.15, 0, 0.0948754, 0, -0.116184, 7.81154, 0.7634, 1.688)

[node name="MushroomFolk11" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.0729184, 0, 0.0684318, 0, 0.1, 0, -0.0684318, 0, -0.0729184, -5.32758, 0.517416, 2.59578)

[node name="MushroomFolk12" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.0512073, 0, 0.0858942, 0, 0.1, 0, -0.0858942, 0, -0.0512073, -4.86539, 0.51861, 3.57184)

[node name="MushroomFolk13" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.0457471, 0, 0.142854, 0, 0.15, 0, -0.142854, 0, -0.0457471, -4.90293, 0.514725, 2.94238)

[node name="MushroomFolk21" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.0200599, 0, -0.0979673, 0, 0.1, 0, 0.0979673, 0, -0.0200599, 7.50612, 0.823494, -0.680135)

[node name="MushroomFolk22" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.046311, 0, -0.0886301, 0, 0.1, 0, 0.0886301, 0, -0.046311, 8.09508, 0.796784, -1.58545)

[node name="MushroomFolk23" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.0976817, 0, -0.113835, 0, 0.15, 0, 0.113835, 0, -0.0976817, 7.57878, 0.817621, -1.22352)

[node name="MushroomFolk14" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.0031087, 0, 0.0799395, 0, 0.08, 0, -0.0799395, 0, -0.0031087, -5.37066, 0.524125, -0.944402)

[node name="MushroomFolk17" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(-0.0165822, 0, 0.0986156, 0, 0.0999999, 0, -0.0986156, 0, -0.0165822, -5.49395, 0.530301, -1.37235)

[node name="MushroomFolk15" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(0.0225401, 0, 0.198726, 0, 0.2, 0, -0.198726, 0, 0.0225401, -4.88985, 0.554432, -1.67949)

[node name="MushroomFolk16" parent="Mushrooms" instance=ExtResource("1_orcbs")]
transform = Transform3D(0.0501104, 0, 0.141383, 0, 0.15, 0, -0.141383, 0, 0.0501104, -5.30503, 0.553218, -2.30858)

[node name="Ground" parent="." instance=ExtResource("3_vf2lv")]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40.7382, 0, -40.7003)
visible = false

[node name="AudioPlayers" type="Node3D" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="AudioPlayers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07614, 4.62008, -8.68082)
stream = ExtResource("4_pnqpo")
volume_db = -4.0
bus = &"SFX"

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="AudioPlayers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.82107, 8.09223)
stream = ExtResource("4_pnqpo")
volume_db = -4.0
bus = &"SFX"

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="AudioPlayers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.89973, 5.16887, 0)
stream = ExtResource("4_pnqpo")
volume_db = -4.0
bus = &"SFX"
